# urng

./: .gitignore  Cargo.toml  README.md  bench.md  build.rs  test.nu
examples/: main.rs  test.rs
examples/cabi/: main.rs  test.rs
examples/iter/: test.rs
examples/scalar/: test.rs
examples/test/: test.rs
examples/testing/: main.rs
examples/wide/: test.rs
scripts/: test-all-features.ps1
src/: _internal.rs  bst.rs  cabi32.rs  cabi64.rs  choice.rs  lib.rs  macros.rs  rng.rs  rng128.rs  rng32.rs  rng64.rs  rngv.rs  sampler.rs  sampler32.rs  sampler64.rs  seedgen.rs  shuffle.rs
src/cabi32/: jsf.rs  lcg.rs  mersenne.rs  mod.rs  pcg.rs  philox.rs  sfc.rs  splitmix.rs  squares.rs  threefry.rs  xoroshiro.rs  xorshift.rs  xoshiro.rs
src/cabi64/: biski.rs  cet.rs  lcg.rs  mersenne.rs  mod.rs  philox.rs  sfc.rs  splitmix.rs  threefish.rs  twisted_gfsr.rs  xoroshiro.rs  xorshift.rs  xoshiro.rs
src/rand32/: mod.rs
src/rand64/: mod.rs
src/rng128/: mod.rs  xorshift.rs
src/rng32/: jsf.rs  lcg.rs  mersenne.rs  mod.rs  pcg.rs  philox.rs  sfc.rs  splitmix.rs  squares.rs  threefry.rs  xoroshiro.rs  xorshift.rs  xoshiro.rs
src/rng64/: biski.rs  cet.rs  lcg.rs  mersenne.rs  mod.rs  philox.rs  sfc.rs  splitmix.rs  threefish.rs  twisted_gfsr.rs  xoroshiro.rs  xorshift.rs  xoshiro.rs
src/sampler32/: alias.rs  bst.rs  mod.rs
src/sampler64/: alias.rs  bst.rs  mod.rs
src/testing/: README.md  _internal.rs  birthday.rs  chisq.rs  ks.rs  mcpi.rs  mod.rs  nist.rs  paranoid.rs  pracrand.rs  rand_adapter.rs  runs.rs  serial.rs  sincos_compat.c  stream.rs  test.rs  testu01.rs  testu01_compat.h
src/testing/msvc_compat/: unistd.h
src/wide/: _internal.rs  jsf.rs  mod.rs  pcg.rs  sfc.rs  splitmix.rs  squares.rs  threefry.rs  xoroshiro.rs  xorshift.rs  xoshiro.rs
tests/: stat_tests.rs
tests/stat/: chisq.rs  mod.rs  monte_carlo.rs  scatter.rs
