[package]
name = "urng"
version = "0.6.0"
edition = "2024"
license = "MIT"
rust-version = "1.92"
authors = ["cet"]
description = "Universal Random Number Generator"
repository = "https://github.com/cet-t/urng"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
csbindgen = "1.9.7"

[dev-dependencies]
colored = "3.1.1"
thousands = "0.2.0"
plotters = "0.3"
anyhow = "1"
rand = "0.10.1"

[[example]]
name = "main"
required-features = ["cabi"]
path = "examples/cabi/main.rs"

[[example]]
name = "test"
required-features = ["cabi"]
path = "examples/cabi/test.rs"

[features]
rand = ["dep:rand_core"]
cabi = []
wide = []
sampler = []
seedgen = []
testing = []

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
# C ABI exports mirror the native signatures; argument count is fixed by the ABI.
too_many_arguments = "allow"
# Index loops in SIMD setup/compute kernels are deliberate (fixed-size lanes).
needless_range_loop = "allow"

[dependencies]
wide = "1.3.0"
bytemuck = "1.25"
rayon = "1.10"
paste = "1.0.15"
thiserror = "2"
rand_core = { version = "0.10.1", optional = true }
