[package]
name = "urng"
version = "0.7.2"
edition = "2024"
license = "MIT"
rust-version = "1.92"
authors = ["cet"]
description = "Universal Random Number Generator"
repository = "https://github.com/cet-t/urng"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
csbindgen = "1.9.7"

[dev-dependencies]
rand = { version = "0.10", default-features = false }
colored = "3.1.1"
thousands = "0.2.0"
plotters = "0.3"
anyhow = "1"

[[example]]
name = "main"
required-features = ["cabi"]
path = "examples/cabi/main.rs"

[[example]]
name = "test"
required-features = ["cabi"]
path = "examples/cabi/test.rs"

[features]
rand = ["dep:rand_core"]
cabi = ["dep:rayon"]
wide = ["dep:wide"]
sampler = []
seedgen = []
testing = ["dep:thiserror"]

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
too_many_arguments = "allow"
needless_range_loop = "allow"

[dependencies]
wide = { version = "1.5.0", optional = true }
bytemuck = { version = "1", features = ["derive"] }
paste = "1"
rayon = { version = "1.10", optional = true }
rand_core = { version = "0.10", optional = true }
thiserror = { version = "2", optional = true }
wrapn = "0.6.2"
